--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,16 @@
   <version>0.0.1-SNAPSHOT</version>
 
   <dependencies> 
+  
+    
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.3.0</version>
+    <scope>test</scope>
+</dependency>
+  
     
     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 <dependency>
